# 6502_Emulator

./: CMakeLists.txt  README.md
src/: cpu_6502.cpp  cpu_6502.h  cpu_6502_arithmetic_test.cpp  cpu_6502_arithmetic_test.h  cpu_6502_branch_test.cpp  cpu_6502_branch_test.h  cpu_6502_logic_test.cpp  cpu_6502_logic_test.h  cpu_6502_main.cpp  cpu_6502_main_test.cpp  cpu_6502_main_test.h  cpu_6502_memory_test.cpp  cpu_6502_memory_test.h  memory.cpp  memory.h
